# bfsi-compliance-checker

./: .env.example  .gitignore  ARCHITECTURE.md  pyproject.toml
.claude/: settings.json
bfsifiles/: README.md  __init__.py  bfsi_advisor.py  bfsi_schema.json  bfsi_sources.yaml  example_usage.py
src/bfsi_compliance/: __init__.py  server.py
src/bfsi_compliance/grounding/: __init__.py
src/bfsi_compliance/rules/: cert_in_rules.json  india_tax_rules.json  insurance_rules.json  ipo_rules.json  mutual_fund_rules.json  pci_dss_rules.json  rbi_rules.json  stocks_rules.json
src/bfsi_compliance/tools/: __init__.py  cert_in.py  india_tax.py  insurance.py  ipo.py  live_nav.py  mutual_funds.py  pci_dss.py  rbi_csf.py  stocks.py
tests/: test_cert_in.py  test_grounding.py  test_india_tax.py  test_insurance.py  test_ipo.py  test_mutual_funds.py  test_pci_dss.py  test_rbi.py  test_stocks.py
web/: app.py
web/static/: app.js  index.html  style.css
